--- a/src/BookingCard/BookingDetailsCard.module.css
+++ b/src/BookingCard/BookingDetailsCard.module.css
@@ -3,6 +3,7 @@
 
 .booking-card-wrapper {
     display: flex;
+
     justify-content: space-between;
     align-items: center;
     padding: 10px;
@@ -10,7 +11,9 @@
     border-radius: 12px;
     background-color: #fff;
     margin-bottom: 10px;
-    width: 30vw;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 
     overflow: hidden;
     /*background: red;*/
@@ -20,18 +23,77 @@
 }
 
 
+.booking-participants{
+    color: #777;
+    display: flex;
+    justify-items: center;
+    /*animation: asd ease 30s;*/
+    /*font-size: 0;*/
+    /*opacity: 0;*/
+    /*height: max-content;*/
+    max-height: 500px;
+    border-top: 0 solid #C7C7C7;
+
+    /*transition: all 0.25s ease-out;*/
+    /*transition: max-height 0.25s ease-out;*/
+    /*height: 0;*/
+    overflow: hidden;
+    /*background: red;*/
+    margin-top: 15px;
+
+
+}
+.booking-participants.state{
+    background: red;
+    max-height: 500px;
+    /*transition: max-height 0.25s ease-in;*/
+    border-top: 1px solid #C7C7C7;
+
+    /*transition: all 0.4s ease-in;*/
+}
+
 @keyframes asd {
-    from{
+    0%{
+        border-top: 0 solid #C7C7C7;
+
         height: 0;
         /*opacity: 0;*/
     }
-    to{
-        height: 100px;
+    20%{
+        border-top: 10px solid #C7C7C7;
+
+        height: 0;
+    }
+    100%{
+
+
+        height: 100%;
         /*opacity: 100%;*/
 
 
     }
 }
+
+
+.booking-owner {
+    font-size: 14px;
+    color: #777;
+    display: flex;
+    justify-items: center;
+    height: 100%;
+    padding: 5px 3px;
+    /*background: RED;*/
+    margin-left: 5px;
+    border: 1px black solid;
+    border-radius: 7px;
+}
+
+.booking-owner .icon {
+    font-size: 16px;
+}
+
+
+
 
 
 .time-block {
@@ -64,26 +126,8 @@
     font-size: 20px;
 }
 
-.booking-owner {
-    font-size: 14px;
-    color: #777;
-    display: flex;
-    justify-items: center;
-}
 
-.booking-owner .icon {
-    font-size: 16px;
-}
 
-.booking-participants{
-
-    font-size: 14px;
-    color: #777;
-    display: flex;
-    justify-items: center;
-    animation: asd ease 10s;
-
-}
 
 
 .booking-tags {
